--- a/habit/templates/habit.html
+++ b/habit/templates/habit.html
@@ -79,8 +79,22 @@
 			<div class="glanceyear-content"  id="js-glanceyear"></div>
 			<div class="count" id="recorded_dates">{{recorded_dates}}</div>
 		</div>
-	</div>
 
+		<div class="glanceyear-summary container">
+			<div class="glanceyear-legend">
+				Less&nbsp;
+				<span style="background-color: #eee"></span>
+				<span style="background-color: #D6E685"></span>
+				<span style="background-color: #8CC665"></span>
+				<span style="background-color: #44A340"></span>
+				<span style="background-color: #1E6823"></span>
+				<span style="background-color: #021E02"></span>
+				&nbsp;More
+			</div>
+			Summary of All Habits <br>
+			<span id="debug"></span>
+		</div>
+	</div>
 
 
 	<div class="show-bar container" >
